namespaces.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Namespace
  metadata:
      name: webapp
- apiVersion: v1
  kind: Namespace
  metadata:
      name: prometheus
- apiVersion: v1
  kind: Namespace
  metadata:
      name: grafana
