deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  labels:
    app: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: 097084951758.dkr.ecr.us-east-1.amazonaws.com/alexeyklochkoecr:latest
        ports:
        - containerPort: 8080
